@@ -19,12 +19,21 @@
 modules = Translator.PsanaModuleDetectorXface Translator.H5Output
 
 [Translator.PsanaModuleDetectorXface]
-# include standard translation of detectors n shots.
+
+# set raw_freq to n to include standard translation of detectors n shots.
 # set to 1 to include all standard, but set to 0 or something negative
 # to never include standard. Use something prime in case it helps with
 # time bias
 raw_freq = 109
 
+# choices for detmethod are image, calib or raw. raw will be significantly faster,
+# but not include any calibrations
+detmethod = image
+
+# convert calibrated detector results to int16. Results are clipped, to if gain
+# caused the dectector to go outside [-32768, 32767], those values will be clipped 
+# to those boundary values. Good for filesize, but lose some precision from calibration
+convert_to_int16 = False
 
 [Translator.H5Output]
 # here is where you would set any Translator specific options you require.
