@@ -11,6 +11,12 @@ Package author: David A. Schneider
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-54
+2016-6-22 David Schneider
+- add configuration options - detmethod, can be raw,image or calib, and
+  convert_to_int16 to clip and convert.
+- report timing for detector interface.
+	
 Tag: V00-02-53
 2016-6-20 David Schneider
 - incorporate detector xface images into Translation JIRA PSAS-246
